--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-10-26  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (uninstall): Don't abort if some directories are missing.
+	Apply transformation rules to manual pages, desktop and icon files.
+	No more emacs22 icons to uninstall.
+
 2012-10-24  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (install-etc, install-man):
