--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-10-26  Martin Rudalics  <rudalics@gmx.at>
+
+	* mouse.el (mouse-drag-line): Move last form into preceding when
+	clause (Bug#12731).
+
+	* help.el (resize-temp-buffer-window): Fix doc-string.
+
 2012-10-25  David Engster  <deng@randomsample.de>
 
 	* emacs-lisp/eieio.el (eieio-update-lisp-imenu-expression):
