--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-10-26  Eli Zaretskii  <eliz@gnu.org>
+
+	* w32fns.c (w32_wnd_proc) <WM_MOUSEMOVE>: Don't enable tracking of
+	mouse movement events if the menu bar is active.  This avoids
+	producing a busy "hour-glass" cursor by Windows if the mouse
+	pointer is positioned over a tooltip shown for some menu item.
+
 2012-10-25  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Don't assume process IDs fit in int.
