--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-10-26  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* emacs-lisp/macroexp.el (macroexp--expand-all):
+	Obey byte-compile-warning-enabled-p (bug#12486).
+
 	* vc/diff-mode.el (diff-end-of-hunk): Also skip potential "no LF at eol".
 	(diff-refine-hunk): Similarly, handle the "no LF at eol" (bug#12584).
 
