More Emacs 24.3 documentation updates.
* doc/emacs/building.texi (Compilation): Document compilation-always-kill.

* doc/emacs/files.texi (Misc File Ops): Symbolic links on Windows only work
on Vista and later.

* doc/emacs/frames.texi (Mouse Avoidance): Mention new variable
mouse-avoidance-banish-position.

* doc/emacs/mule.texi (Recognize Coding): Remove an unreferenced vindex.

* doc/emacs/package.texi (Package Menu): Document the "new" status.

* doc/emacs/programs.texi (Which Function): Which Function mode now works in
all major modes by default.

* doc/emacs/search.texi (Symbol Search): New node.

* doc/emacs/windows.texi (Window Choice): Don't refer to the obsolete
special-display feature.

* commands.texi (Event Input Misc): Remove last-input-char.
(Command Loop Info): Remove last-command-char.

* display.texi (Fringe Bitmaps): Add exclamation-mark bitmap.

* frames.texi (Initial Parameters): Don't mention the obsolete
special-display feature.

* hooks.texi (Standard Hooks): Remove obsolete hooks.

* markers.texi (Information from Markers): Remove obsolete
function buffer-has-markers-at.

* minibuf.texi (High-Level Completion): Don't mention removed
function iswitchb-read-buffer.

* text.texi (Yanking): Document yank-handled-properties.

* windows.texi (Choosing Window): Don't mention the obsolete
special display feature.
(Choosing Window Options): Remove obsolete special-display
variables, and the functions special-display-p and
special-display-popup-frame.

* subr.el (insert-buffer-substring-as-yank): Doc fix.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,25 @@
+2012-10-27  Chong Yidong  <cyd@gnu.org>
+
+	* frames.texi (Mouse Avoidance): Mention new variable
+	mouse-avoidance-banish-position.
+
+	* programs.texi (Which Function): Which Function mode now works in
+	all major modes by default.
+
+	* mule.texi (Recognize Coding): Remove an unreferenced vindex.
+
+	* files.texi (Misc File Ops): Symbolic links on Windows only work
+	on Vista and later.
+
+	* building.texi (Compilation): Document compilation-always-kill.
+
+	* search.texi (Symbol Search): New node.
+
+	* package.texi (Package Menu): Document the "new" status.
+
+	* windows.texi (Window Choice): Don't refer to the obsolete
+	special-display feature.
+
 2012-10-24  Chong Yidong  <cyd@gnu.org>
 
 	* mule.texi (Text Coding): set-buffer-file-coding-system can now
